src/objects/Scenario_Savings__c.object
<CustomObject>
    <fields>
        <fullName>APY__c</fullName>
        <label>APY (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scenario Savings</relationshipLabel>
        <relationshipName>Scenario_Savings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Growth_Rate__c</fullName>
        <label>Growth Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Scenario Savings</relationshipLabel>
        <relationshipName>Scenario_Savings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>401K</fullName>
                </value>
                <value>
                    <fullName>529 Account</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Money Market</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retail Brokerage</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scenario Saving</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scenario_Savings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Savings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>